refactor: update in model_comparison notebook after adding hyperparameter tuning

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "b613b39e",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 8 is smaller than n_iter=10. Running 8 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -35,7 +43,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>0.918966</td>\n",
+       "      <td>0.92931</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -43,7 +51,7 @@
       ],
       "text/plain": [
        "           model  accuracy\n",
-       "0  random_forest  0.918966"
+       "0  random_forest   0.92931"
       ]
      },
      "execution_count": 1,
@@ -59,8 +67,6 @@
     "\n",
     "from src.data_loader import DataLoader\n",
     "from src.models.random_forest import RandomForestModel\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
     "\n",
     "# Load preprocessed data\n",
@@ -71,24 +77,21 @@
     "\n",
     "models = {\n",
     "    'random_forest': {\n",
-    "        'model': RandomForestModel(),\n",
+    "        'model': RandomForestModel(param_grid={'n_estimators': [100,150], 'max_depth': [None, 10], 'min_samples_split': [2, 5]}),\n",
     "        'scaled': True,\n",
-    "        'params': {'n_estimators': [100,150], 'max_depth': [None, 10], 'min_samples_split': [2, 5]}\n",
     "        }\n",
     "}\n",
     "\n",
     "results = []\n",
+    "for name, config in models.items():\n",
+    "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'])\n",
     "\n",
-    "for model in models:\n",
-    "    if models[model]['scaled'] == True:\n",
-    "        X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=True)\n",
-    "    else:\n",
-    "        X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=False)\n",
-    "        \n",
-    "    models[model]['model'].train(X_train, y_train)\n",
-    "    metrics = models[model]['model'].evaluate(X_test, y_test)\n",
+    "    model = config['model']\n",
+    "    model.train(X_train, y_train)\n",
+    "    metrics = model.evaluate(X_test, y_test)\n",
+    "\n",
     "    results.append({\n",
-    "        \"model\": model,\n",
+    "        'model': name,\n",
     "        **metrics\n",
     "    })\n",
     "\n",
