--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b613b39e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 8 is smaller than n_iter=10. Running 8 iterations. For exhaustive searches, use GridSearchCV.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -37,6 +29,7 @@
        "      <th></th>\n",
        "      <th>model</th>\n",
        "      <th>accuracy</th>\n",
+       "      <th>best_params</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -44,14 +37,26 @@
        "      <th>0</th>\n",
        "      <td>random_forest</td>\n",
        "      <td>0.92931</td>\n",
+       "      <td>{'n_estimators': 150, 'min_samples_split': 11, 'max_depth': 8}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>logistic_regression</td>\n",
+       "      <td>0.92931</td>\n",
+       "      <td>{'solver': 'liblinear', 'C': 0.615848211066026}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           model  accuracy\n",
-       "0  random_forest   0.92931"
+       "                 model  accuracy  \\\n",
+       "0        random_forest   0.92931   \n",
+       "1  logistic_regression   0.92931   \n",
+       "\n",
+       "                                                      best_params  \n",
+       "0  {'n_estimators': 150, 'min_samples_split': 11, 'max_depth': 8}  \n",
+       "1                 {'solver': 'liblinear', 'C': 0.615848211066026}  "
       ]
      },
      "execution_count": 1,
@@ -60,28 +65,33 @@
     }
    ],
    "source": [
-    "# notebooks/02_model_comparison.ipynb\n",
-    "\n",
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
     "from src.data_loader import DataLoader\n",
     "from src.models.random_forest import RandomForestModel\n",
+    "from src.models.logistic_regression import LogisticRegressionModel\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "# Load preprocessed data\n",
     "dl = DataLoader()\n",
     "\n",
     "models = {\n",
     "    'random_forest': {\n",
-    "        'model': RandomForestModel(param_grid={'n_estimators': [100,150], 'max_depth': [None, 10], 'min_samples_split': [2, 5]}),\n",
+    "        'model': RandomForestModel(param_grid={'n_estimators': [100, 150, 200], 'max_depth': [None, 2, 4, 6, 8, 10, 12], 'min_samples_split': [5, 7, 9, 11]}),\n",
+    "        'scaled': False,\n",
+    "        },\n",
+    "    'logistic_regression': {\n",
+    "        'model': LogisticRegressionModel(param_grid={'C': np.logspace(-4, 4, 20), 'solver': ['lbfgs','liblinear']}),\n",
     "        'scaled': True,\n",
-    "        }\n",
+    "        },\n",
     "}\n",
     "\n",
     "results = []\n",
     "for name, config in models.items():\n",
-    "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'])\n",
+    "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'], test_size=0.2)\n",
     "\n",
     "    model = config['model']\n",
     "    model.train(X_train, y_train)\n",
@@ -89,7 +99,8 @@
     "\n",
     "    results.append({\n",
     "        'model': name,\n",
-    "        **metrics\n",
+    "        **metrics,\n",
+    "        'best_params': model.model.best_params_,\n",
     "    })\n",
     "\n",
     "# Show results\n",
