refactor: move models hyperparameters

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -69,28 +69,15 @@
     "sys.path.append(\"..\")\n",
     "\n",
     "from src.data_loader import DataLoader\n",
-    "from src.models.random_forest import RandomForestModel\n",
-    "from src.models.logistic_regression import LogisticRegressionModel\n",
-    "import numpy as np\n",
+    "from src.models import model_parameters\n",
     "import pandas as pd\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "# Load preprocessed data\n",
     "dl = DataLoader()\n",
     "\n",
-    "models = {\n",
-    "    'random_forest': {\n",
-    "        'model': RandomForestModel(param_grid={'n_estimators': [100, 150, 200], 'max_depth': [None, 2, 4, 6, 8, 10, 12], 'min_samples_split': [5, 7, 9, 11]}),\n",
-    "        'scaled': False,\n",
-    "        },\n",
-    "    'logistic_regression': {\n",
-    "        'model': LogisticRegressionModel(param_grid={'C': np.logspace(-4, 4, 20), 'solver': ['lbfgs','liblinear']}),\n",
-    "        'scaled': True,\n",
-    "        },\n",
-    "}\n",
-    "\n",
     "results = []\n",
-    "for name, config in models.items():\n",
+    "for name, config in model_parameters.items():\n",
     "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'], test_size=0.2)\n",
     "\n",
     "    model = config['model']\n",
