refactor: refactor DataLoader and project files naming

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -7,6 +7,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 8 is smaller than n_iter=20. Running 8 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<div>\n",
@@ -29,34 +37,46 @@
        "      <th></th>\n",
        "      <th>model</th>\n",
        "      <th>accuracy</th>\n",
+       "      <th>best_score</th>\n",
        "      <th>best_params</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>random_forest</td>\n",
-       "      <td>0.92931</td>\n",
-       "      <td>{'n_estimators': 150, 'min_samples_split': 11, 'max_depth': 8}</td>\n",
+       "      <th>1</th>\n",
+       "      <td>xgboost</td>\n",
+       "      <td>0.932406</td>\n",
+       "      <td>0.925947</td>\n",
+       "      <td>{'subsample': 0.8, 'n_estimators': 100, 'max_depth': 3, 'learning_rate': 0.05}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>2</th>\n",
        "      <td>logistic_regression</td>\n",
-       "      <td>0.92931</td>\n",
+       "      <td>0.932406</td>\n",
+       "      <td>0.925947</td>\n",
        "      <td>{'solver': 'liblinear', 'C': 0.615848211066026}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>random_forest</td>\n",
+       "      <td>0.930417</td>\n",
+       "      <td>0.926447</td>\n",
+       "      <td>{'n_estimators': 150, 'min_samples_split': 7, 'max_depth': 12}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 model  accuracy  \\\n",
-       "0        random_forest   0.92931   \n",
-       "1  logistic_regression   0.92931   \n",
+       "                 model  accuracy  best_score  \\\n",
+       "1              xgboost  0.932406    0.925947   \n",
+       "2  logistic_regression  0.932406    0.925947   \n",
+       "0        random_forest  0.930417    0.926447   \n",
        "\n",
-       "                                                      best_params  \n",
-       "0  {'n_estimators': 150, 'min_samples_split': 11, 'max_depth': 8}  \n",
-       "1                 {'solver': 'liblinear', 'C': 0.615848211066026}  "
+       "                                                                      best_params  \n",
+       "1  {'subsample': 0.8, 'n_estimators': 100, 'max_depth': 3, 'learning_rate': 0.05}  \n",
+       "2                                 {'solver': 'liblinear', 'C': 0.615848211066026}  \n",
+       "0                  {'n_estimators': 150, 'min_samples_split': 7, 'max_depth': 12}  "
       ]
      },
      "execution_count": 1,
@@ -74,7 +94,7 @@
     "pd.set_option('display.max_colwidth', None)\n",
     "\n",
     "# Load preprocessed data\n",
-    "dl = DataLoader()\n",
+    "dl = DataLoader(random_state=42)\n",
     "\n",
     "results = []\n",
     "for name, config in model_parameters.items():\n",
@@ -87,7 +107,8 @@
     "    results.append({\n",
     "        'model': name,\n",
     "        **metrics,\n",
-    "        'best_params': model.model.best_params_,\n",
+    "        'best_score': model.model.best_score_,\n",
+    "        'best_params': model.model.best_params_\n",
     "    })\n",
     "\n",
     "# Show results\n",
