refactor: move hyperparameter search n_iter value to BaseModel

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 8 is smaller than n_iter=20. Running 8 iterations. For exhaustive searches, use GridSearchCV.\n",
+      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 40 is smaller than n_iter=60. Running 40 iterations. For exhaustive searches, use GridSearchCV.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -45,23 +45,23 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>xgboost</td>\n",
-       "      <td>0.932406</td>\n",
-       "      <td>0.925947</td>\n",
-       "      <td>{'subsample': 0.8, 'n_estimators': 100, 'max_depth': 3, 'learning_rate': 0.05}</td>\n",
+       "      <td>0.934394</td>\n",
+       "      <td>0.925954</td>\n",
+       "      <td>{'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>logistic_regression</td>\n",
        "      <td>0.932406</td>\n",
        "      <td>0.925947</td>\n",
-       "      <td>{'solver': 'liblinear', 'C': 0.615848211066026}</td>\n",
+       "      <td>{'solver': 'liblinear', 'C': 0.0001}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>random_forest</td>\n",
        "      <td>0.930417</td>\n",
-       "      <td>0.926447</td>\n",
-       "      <td>{'n_estimators': 150, 'min_samples_split': 7, 'max_depth': 12}</td>\n",
+       "      <td>0.925954</td>\n",
+       "      <td>{'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -69,14 +69,14 @@
       ],
       "text/plain": [
        "                 model  accuracy  best_score  \\\n",
-       "1              xgboost  0.932406    0.925947   \n",
+       "1              xgboost  0.934394    0.925954   \n",
        "2  logistic_regression  0.932406    0.925947   \n",
-       "0        random_forest  0.930417    0.926447   \n",
+       "0        random_forest  0.930417    0.925954   \n",
        "\n",
        "                                                                      best_params  \n",
-       "1  {'subsample': 0.8, 'n_estimators': 100, 'max_depth': 3, 'learning_rate': 0.05}  \n",
-       "2                                 {'solver': 'liblinear', 'C': 0.615848211066026}  \n",
-       "0                  {'n_estimators': 150, 'min_samples_split': 7, 'max_depth': 12}  "
+       "1  {'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}  \n",
+       "2                                            {'solver': 'liblinear', 'C': 0.0001}  \n",
+       "0                {'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}  "
       ]
      },
      "execution_count": 1,
