--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b613b39e",
    "metadata": {},
    "outputs": [
@@ -11,21 +11,15 @@
      "output_type": "stream",
      "text": [
       "Current model: random_forest\n",
-      "Time: 11.40 s\n",
+      "Time: 6.76 [s]\n",
       "Current model: xgboost\n",
-      "Time: 2.66 s\n",
+      "Time: 1.51 [s]\n",
       "Current model: light_gbm\n",
-      "Time: 8.84 s\n",
+      "Time: 6.35 [s]\n",
+      "Current model: catboost\n",
+      "Time: 8.85 [s]\n",
       "Current model: logistic_regression\n",
-      "Time: 0.16 s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\karol\\source\\repos\\human-personality-predictor\\.venv\\lib\\site-packages\\sklearn\\model_selection\\_search.py:317: UserWarning: The total space of parameters 40 is smaller than n_iter=60. Running 40 iterations. For exhaustive searches, use GridSearchCV.\n",
-      "  warnings.warn(\n"
+      "Time: 0.14 [s]\n"
      ]
     },
     {
@@ -50,6 +44,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>model</th>\n",
+       "      <th>execution_time</th>\n",
        "      <th>accuracy</th>\n",
        "      <th>best_score</th>\n",
        "      <th>best_params</th>\n",
@@ -59,27 +54,39 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>xgboost</td>\n",
+       "      <td>1.51</td>\n",
        "      <td>0.934394</td>\n",
        "      <td>0.925954</td>\n",
        "      <td>{'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>catboost</td>\n",
+       "      <td>8.85</td>\n",
+       "      <td>0.932406</td>\n",
+       "      <td>0.925947</td>\n",
+       "      <td>{'verbose': 0, 'n_estimators': 100, 'learning_rate': 0.01, 'l2_leaf_reg': 1, 'depth': 4}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
        "      <td>light_gbm</td>\n",
+       "      <td>6.35</td>\n",
        "      <td>0.932406</td>\n",
        "      <td>0.925947</td>\n",
        "      <td>{'verbose': -1, 'subsample': 0.8, 'num_leaves': 78, 'n_estimators': 250, 'max_depth': 2, 'learning_rate': 0.01, 'colsample_bytree': 0.5}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>3</th>\n",
        "      <td>logistic_regression</td>\n",
+       "      <td>0.14</td>\n",
        "      <td>0.932406</td>\n",
        "      <td>0.925947</td>\n",
        "      <td>{'solver': 'liblinear', 'C': 0.0001}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>4</th>\n",
        "      <td>random_forest</td>\n",
+       "      <td>6.76</td>\n",
        "      <td>0.930417</td>\n",
        "      <td>0.925954</td>\n",
        "      <td>{'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}</td>\n",
@@ -89,17 +96,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                 model  accuracy  best_score  \\\n",
-       "0              xgboost  0.934394    0.925954   \n",
-       "1            light_gbm  0.932406    0.925947   \n",
-       "2  logistic_regression  0.932406    0.925947   \n",
-       "3        random_forest  0.930417    0.925954   \n",
+       "                 model  execution_time  accuracy  best_score  \\\n",
+       "0              xgboost            1.51  0.934394    0.925954   \n",
+       "1             catboost            8.85  0.932406    0.925947   \n",
+       "2            light_gbm            6.35  0.932406    0.925947   \n",
+       "3  logistic_regression            0.14  0.932406    0.925947   \n",
+       "4        random_forest            6.76  0.930417    0.925954   \n",
        "\n",
        "                                                                                                                                best_params  \n",
        "0                                                            {'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}  \n",
-       "1  {'verbose': -1, 'subsample': 0.8, 'num_leaves': 78, 'n_estimators': 250, 'max_depth': 2, 'learning_rate': 0.01, 'colsample_bytree': 0.5}  \n",
-       "2                                                                                                      {'solver': 'liblinear', 'C': 0.0001}  \n",
-       "3                                                                          {'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}  "
+       "1                                                  {'verbose': 0, 'n_estimators': 100, 'learning_rate': 0.01, 'l2_leaf_reg': 1, 'depth': 4}  \n",
+       "2  {'verbose': -1, 'subsample': 0.8, 'num_leaves': 78, 'n_estimators': 250, 'max_depth': 2, 'learning_rate': 0.01, 'colsample_bytree': 0.5}  \n",
+       "3                                                                                                      {'solver': 'liblinear', 'C': 0.0001}  \n",
+       "4                                                                          {'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}  "
       ]
      },
      "execution_count": 1,
@@ -130,14 +139,16 @@
     "    model = config['model']\n",
     "    model.train(X_train, y_train)\n",
     "    metrics = model.evaluate(X_test, y_test)\n",
-    "\n",
+    "    et = round(time.time() - t0, 2)\n",
     "    results.append({\n",
     "        'model': name,\n",
+    "        'execution_time': et,\n",
     "        **metrics,\n",
     "        'best_score': model.model.best_score_,\n",
     "        'best_params': model.model.best_params_\n",
     "    })\n",
-    "    print(f'Time: {time.time() - t0:.2f} [s]\\n')\n",
+    "    print(f'Time: {et:.2f} [s]')\n",
+    "\n",
     "\n",
     "# Show results\n",
     "df_results = pd.DataFrame(results).sort_values(by=\"accuracy\", ascending=False).reset_index(drop=True)\n",
