refactor: add model choosing in notebook

--- a/notebooks/model_comparison.ipynb
+++ b/notebooks/model_comparison.ipynb
@@ -10,18 +10,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current model: random_forest\n",
-      "Time: 6.76 [s]\n",
-      "Current model: xgboost\n",
-      "Time: 1.51 [s]\n",
-      "Current model: light_gbm\n",
-      "Time: 6.35 [s]\n",
-      "Current model: catboost\n",
-      "Time: 8.85 [s]\n",
-      "Current model: logistic_regression\n",
-      "Time: 0.14 [s]\n"
+      "All models: ['random_forest', 'xgboost', 'light_gbm', 'catboost', 'logistic_regression']\n"
      ]
     },
+    {
+     "data": {
+      "text/plain": [
+       "{'logistic_regression': {'model': <src.models.baseline_logistic_regression.LogisticRegressionModel at 0x2153f674ca0>,\n",
+       "  'scaled': True},\n",
+       " 'random_forest': {'model': <src.models.ensemble_random_forest.RandomForestModel at 0x2153db7d9f0>,\n",
+       "  'scaled': False},\n",
+       " 'xgboost': {'model': <src.models.ensemble_xgboost.XGBoostModel at 0x2153f3d1810>,\n",
+       "  'scaled': False}}"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import sys\n",
+    "sys.path.append(\"..\")\n",
+    "\n",
+    "from src.data_loader import DataLoader\n",
+    "from src.models import model_parameters\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "# Load preprocessed data\n",
+    "dl = DataLoader(random_state=42)\n",
+    "\n",
+    "# Due to the limited amount of memory and time available, choose models that you want to compare - uncomment the ones you want\n",
+    "print(f'All models: {list(model_parameters.keys())}')\n",
+    "models_to_compare = [\n",
+    "    'logistic_regression',\n",
+    "    'random_forest',\n",
+    "    'xgboost', \n",
+    "    # 'light_gbm', \n",
+    "    # 'catboost', \n",
+    "    ]\n",
+    "models= {name: model_parameters[name] for name in models_to_compare}\n",
+    "models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3b09267d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current model: logistic_regression\n",
+      "Time: 4.04 [s]\n",
+      "Current model: random_forest\n",
+      "Time: 6.69 [s]\n",
+      "Current model: xgboost\n",
+      "Time: 2.35 [s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = []\n",
+    "for name, config in models.items():\n",
+    "    print(f'Current model: {name}')\n",
+    "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'], test_size=0.2)\n",
+    "\n",
+    "    t0 = time.time()\n",
+    "    model = config['model']\n",
+    "    model.train(X_train, y_train)\n",
+    "    metrics = model.evaluate(X_test, y_test)\n",
+    "    et = round(time.time() - t0, 2)\n",
+    "    results.append({\n",
+    "        'model': name,\n",
+    "        'execution_time': et,\n",
+    "        **metrics,\n",
+    "        'best_score': model.model.best_score_,\n",
+    "        'best_params': model.model.best_params_\n",
+    "    })\n",
+    "    print(f'Time: {et:.2f} [s]')\n",
+    "\n",
+    "df_results = pd.DataFrame(results).sort_values(by=\"accuracy\", ascending=False).reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "493d6c58",
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -53,43 +134,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>xgboost</td>\n",
-       "      <td>1.51</td>\n",
-       "      <td>0.934394</td>\n",
-       "      <td>0.925954</td>\n",
-       "      <td>{'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>catboost</td>\n",
-       "      <td>8.85</td>\n",
-       "      <td>0.932406</td>\n",
-       "      <td>0.925947</td>\n",
-       "      <td>{'verbose': 0, 'n_estimators': 100, 'learning_rate': 0.01, 'l2_leaf_reg': 1, 'depth': 4}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>light_gbm</td>\n",
-       "      <td>6.35</td>\n",
-       "      <td>0.932406</td>\n",
-       "      <td>0.925947</td>\n",
-       "      <td>{'verbose': -1, 'subsample': 0.8, 'num_leaves': 78, 'n_estimators': 250, 'max_depth': 2, 'learning_rate': 0.01, 'colsample_bytree': 0.5}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>logistic_regression</td>\n",
-       "      <td>0.14</td>\n",
+       "      <td>4.04</td>\n",
        "      <td>0.932406</td>\n",
-       "      <td>0.925947</td>\n",
+       "      <td>0.925946</td>\n",
        "      <td>{'solver': 'liblinear', 'C': 0.0001}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>1</th>\n",
        "      <td>random_forest</td>\n",
-       "      <td>6.76</td>\n",
-       "      <td>0.930417</td>\n",
-       "      <td>0.925954</td>\n",
-       "      <td>{'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}</td>\n",
+       "      <td>6.69</td>\n",
+       "      <td>0.932406</td>\n",
+       "      <td>0.925946</td>\n",
+       "      <td>{'n_estimators': 300, 'min_samples_split': 5, 'max_depth': 4}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>xgboost</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>0.932406</td>\n",
+       "      <td>0.925946</td>\n",
+       "      <td>{'subsample': 0.5, 'n_estimators': 100, 'max_depth': 4, 'learning_rate': 0.01}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -97,62 +162,23 @@
       ],
       "text/plain": [
        "                 model  execution_time  accuracy  best_score  \\\n",
-       "0              xgboost            1.51  0.934394    0.925954   \n",
-       "1             catboost            8.85  0.932406    0.925947   \n",
-       "2            light_gbm            6.35  0.932406    0.925947   \n",
-       "3  logistic_regression            0.14  0.932406    0.925947   \n",
-       "4        random_forest            6.76  0.930417    0.925954   \n",
+       "0  logistic_regression            4.04  0.932406    0.925946   \n",
+       "1        random_forest            6.69  0.932406    0.925946   \n",
+       "2              xgboost            2.35  0.932406    0.925946   \n",
        "\n",
-       "                                                                                                                                best_params  \n",
-       "0                                                            {'subsample': 0.8, 'n_estimators': 250, 'max_depth': 6, 'learning_rate': 0.01}  \n",
-       "1                                                  {'verbose': 0, 'n_estimators': 100, 'learning_rate': 0.01, 'l2_leaf_reg': 1, 'depth': 4}  \n",
-       "2  {'verbose': -1, 'subsample': 0.8, 'num_leaves': 78, 'n_estimators': 250, 'max_depth': 2, 'learning_rate': 0.01, 'colsample_bytree': 0.5}  \n",
-       "3                                                                                                      {'solver': 'liblinear', 'C': 0.0001}  \n",
-       "4                                                                          {'n_estimators': 100, 'min_samples_split': 9, 'max_depth': None}  "
+       "                                                                      best_params  \n",
+       "0                                            {'solver': 'liblinear', 'C': 0.0001}  \n",
+       "1                   {'n_estimators': 300, 'min_samples_split': 5, 'max_depth': 4}  \n",
+       "2  {'subsample': 0.5, 'n_estimators': 100, 'max_depth': 4, 'learning_rate': 0.01}  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import sys\n",
-    "sys.path.append(\"..\")\n",
-    "\n",
-    "from src.data_loader import DataLoader\n",
-    "from src.models import model_parameters\n",
-    "import pandas as pd\n",
-    "pd.set_option('display.max_colwidth', None)\n",
-    "# measure time\n",
-    "import time\n",
-    "\n",
-    "# Load preprocessed data\n",
-    "dl = DataLoader(random_state=42)\n",
-    "\n",
-    "results = []\n",
-    "for name, config in model_parameters.items():\n",
-    "    print(f'Current model: {name}')\n",
-    "    t0 = time.time()\n",
-    "    X_train, X_test, y_train, y_test = dl.get_data_train_test(scaled=config['scaled'], test_size=0.2)\n",
-    "\n",
-    "    model = config['model']\n",
-    "    model.train(X_train, y_train)\n",
-    "    metrics = model.evaluate(X_test, y_test)\n",
-    "    et = round(time.time() - t0, 2)\n",
-    "    results.append({\n",
-    "        'model': name,\n",
-    "        'execution_time': et,\n",
-    "        **metrics,\n",
-    "        'best_score': model.model.best_score_,\n",
-    "        'best_params': model.model.best_params_\n",
-    "    })\n",
-    "    print(f'Time: {et:.2f} [s]')\n",
-    "\n",
-    "\n",
-    "# Show results\n",
-    "df_results = pd.DataFrame(results).sort_values(by=\"accuracy\", ascending=False).reset_index(drop=True)\n",
-    "df_results\n"
+    "df_results"
    ]
   }
  ],
